--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,27 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
-    background: #fafafa;
+    background: #f0f0f0;
 }
 
 th a:link, th a:visited, th a:hover, th a:active {
     color: #ffffff;
 }
+
+.jumbotron {
+    background-image: url("../img/thermometer-bg.jpg");
+    background-attachment: fixed;
+    background-size: cover;
+    color: #ffffff;
+    text-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
+  }
+
+  .footer {
+    background-color: #aaa;
+  }
+
+
+  .card-header {
+    background-color: rgba(0,0,0,.45);
+    color: #fff;
+  }
